--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
   "unpkg": "dist/js/docsify-themeable.min.js",
   "scripts": {
     "prepare": "run-s clean build",
-    "build": "npm-run-all build:scss --parallel build:js build:pcss",
+    "build": "build:scss --parallel build:pcss",
     "build:js": "rollup -c",
-    "build:pcss": "postcss build/css/**/*.css --dir dist/css --use postcss-remove-null postcss-discard-empty postcss-flexbugs-fixes autoprefixer --map",
+    "build:pcss": "postcss build/css/**/*.css --dir ../css --use postcss-remove-null postcss-discard-empty postcss-flexbugs-fixes autoprefixer --map",
     "build:scss": "node-sass --output-style compressed src/scss/themes -o build/css --source-map true --source-map-contents true --include-path node_modules",
     "clean": "rimraf build/* dist/* docs/css docs/js",
     "serve": "node server.js",
     "start": "run-p watch serve",
-    "watch": "run-p 'build:* -- -w'",
+    "watch:pcss": "postcss build/css/*.css --dir ../css --use postcss-remove-null postcss-discard-empty postcss-flexbugs-fixes autoprefixer --map -w",
+    "watch:scss": "node-sass --output-style compressed src/scss/themes -o build/css --source-map true --source-map-contents true --include-path node_modules -w",
     "prewatch": "npm run build:scss",
     "version": "npm run prepare"
   },
