--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config --global user.name "Konata09"
           git config --global user.email "lz9709@gmail.com"
-          git add dist
+          git add -f dist
           git commit -m "Auto build from ${{ github.sha }}"
           git push
     env:
