--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,8 +36,6 @@ jobs:
           git config --global user.name "Konata09"
           git config --global user.email "lz9709@gmail.com"
           git add -f dist
-          git commit -m "Auto built from ${{ github.sha }}"
+          git commit -m "Auto built from ${{ github.sha }}" || echo "Nothing to update"
       - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: git push
