--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,11 +31,10 @@ jobs:
         run: |
           npm run build:scss
           npm run build
-      - name: Commit files
+      - name: Commit and push
         run: |
           git config --global user.name "Konata09"
           git config --global user.email "lz9709@gmail.com"
           git add -f dist
           git commit -m "Auto built from ${{ github.sha }}" || echo "Nothing to update"
-      - name: Push changes
-        run: git push
+          git push
